@@ -1,3 +1,10 @@
+2025-09-02  Zhengyi Fu  <i@fuzy.me>
+
+	Minor improvement in gnus-diff
+
+	* site-lisp/gnus-diff.el: Require `gnus-art'.
+	(gnus-treat-highlight-diffs): Change to a user option.
+
 2025-09-01  Zhengyi Fu  <i@fuzy.me>
 
 	* init.el: Use `require-theme' to load modus-themes.
